web-app/iui/iui.css
/*
   Copyright (c) 2007-12, iUI Project Members
   See LICENSE.txt for licensing terms
   Version @VERSION@
 */
body {
    margin: 0;
    font-family: Helvetica;
    background: #FFFFFF;
    color: #000000;
    overflow-x: hidden;
    -webkit-user-select: none;
    -webkit-text-size-adjust: none;
}

body > *:not(.toolbar) {
    display: none;
    position: absolute;
    margin: 0;
    padding: 0;
    left: 0;
    top: 45px;
    width: 100%;
    height: auto;
    min-height: 415px;
    -webkit-transition-duration: 300ms;
    -webkit-transition-property: -webkit-transform;
    -webkit-transform: translateX(0%);
}

body.landscape > *:not(.toolbar) {
    height: auto;
    min-height: 268px;
}

body > *[selected="true"] {
    display: block;
}

li > a[selected], li > a:active {
    background-color: #194fdb !important;
    background-repeat: no-repeat, repeat-x !important;	/* TG: !important */
    background-position: right center, left top !important;	/* TG: !important */
    color: #FFFFFF !important;
}

li > a[selected="progress"] {
}

/************************************************************************************************/

body > .toolbar {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    border-bottom: 1px solid #2d3642;
    border-top: 1px solid #6d84a2;
    padding: 0 10px 10px 10px;
    height: 45px;
}

.toolbar > h1 {
    position: absolute;
    overflow: hidden;
    left: 50%;
    margin: 1px 0 0 -75px;
    padding-top: 10px;
    height: 45px;
    font-size: 20px;
    width: 150px;
    font-weight: bold;
    text-shadow: rgba(0, 0, 0, 0.4) 0px -1px 0;
    text-align: center;
    text-overflow: ellipsis;
    white-space: nowrap;
    color: #FFFFFF;
}

body.landscape > .toolbar > h1 {
    margin-left: -125px;
    width: 250px;
}

.button {
    position: absolute;
    overflow: hidden;
    top: 8px;
    right: 6px;
    margin: 0;
    border-width: 0 5px;
    padding: 0 3px;
    width: auto;
    height: 30px;
    line-height: 30px;
    font-family: inherit;
    font-size: 12px;
    font-weight: bold;
    color: #FFFFFF;
    text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0;
    text-overflow: ellipsis;
    text-decoration: none;
    white-space: nowrap;
    background: none;
}

.blueButton {
    border-width: 0 5px;
}

.leftButton {
    left: 6px;
    right: auto;
}

#backButton {
    display: none;
    left: 6px;
    right: auto;
    padding: 0;
    max-width: 55px;
    border-width: 0 8px 0 14px;
}

.whiteButton,
.redButton,
.grayButton {
    display: block;
    border-width: 0 12px;
    padding: 10px;
    text-align: center;
    font-size: 20px;
    font-weight: bold;
    text-decoration: inherit;
    color: inherit;
}

/* TG */ .grayButton[selected], .grayButton:active,
.whiteButton {
    text-shadow: rgba(255, 255, 255, 0.7) 0 1px 0;
/* TG */ background:transparent !important;
}

.redButton {
/* TG */ background:transparent !important;
    color:#fff;
    text-shadow: #7a0001 0 -1px 0;
}

/* TG */ .whiteButton[selected], .whiteButton:active,
.grayButton {
    color: #FFFFFF;
/* TG */ background:transparent !important;
}

/************************************************************************************************/

body > ul > li {
    position: relative;
    margin: 0;
    border-bottom: 1px solid #E0E0E0;
    padding: 8px 0 8px 10px;
    font-size: 20px;
    font-weight: bold;
    list-style: none;
}

body > ul > li.group {
    position: relative;
    top: -1px;
    margin-bottom: -2px;
    border-top: 1px solid #7d7d7d;
    border-bottom: 1px solid #999999;
    padding: 1px 10px;
    font-size: 17px;
    font-weight: bold;
    text-shadow: rgba(0, 0, 0, 0.4) 0 1px 0;
    color: #FFFFFF;
}

body > ul > li.group:first-child {
    top: 0;
    border-top: none;
}

body > ul > li > a {
    display: block;
    margin: -8px 0 -8px -10px;
    padding: 8px 32px 8px 10px;
    text-decoration: none;
    color: inherit;
}

a[target="_replace"] {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    padding-top: 25px;
    padding-bottom: 25px;
    font-size: 18px;
    color: cornflowerblue;
    background-color: #FFFFFF;
    background-image: none;
}

/************************************************************************************************/
    
body > .dialog {
    top: 0;
    width: 100%;
    min-height: 417px;
    z-index: 2;
    background: rgba(0, 0, 0, 0.8);
    padding: 0;
    text-align: right;
}

.dialog > fieldset {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    width: 100%;
    margin: 0;
    border: none;
    border-top: 1px solid #6d84a2;
    padding: 10px 6px;
}

.dialog > fieldset > h1 {
    margin: 0 10px 0 10px;
    padding: 0;
    font-size: 20px;
    font-weight: bold;
    color: #FFFFFF;
    text-shadow: rgba(0, 0, 0, 0.4) 0px -1px 0;
    text-align: center;
}

.dialog > fieldset > label {
    position: absolute;
    margin: 16px 0 0 6px;
    font-size: 14px;
    color: #999999;
}

input:not([type|=radio]):not([type|=checkbox]) {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    width: 100%;
    margin: 8px 0 0 0;
    padding: 6px 6px 6px 44px;
    font-size: 16px;
    font-weight: normal;
}

/************************************************************************************************/

body > .panel {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    padding: 10px;
}

.panel > ul, 
.panel > fieldset {
    position: relative;
    margin: 0 0 20px 0;
    padding: 0;
    background: #FFFFFF;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border: 1px solid #999999;
    font-size: 16px;
}

.panel > ul li,
.row  {
    position: relative;
    min-height: 42px;
    border-bottom: 1px solid #999999;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
}

.panel > ul li:last-child,
fieldset > .row:last-child {
    border-bottom: none !important;
}

.row > input:not([type|=radio]):not([type|=checkbox]) {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    margin: 0;
    border: none;
    padding: 12px 10px 0 110px;
    height: 42px;
    background: none;
}
.row > input[type|=radio], .row > input[type|=checkbox] {
  margin: 7px 7px 0 0;
  height: 25px;
  width: 25px;
}

.row > label {
    position: absolute;
    margin: 0 0 0 14px;
    line-height: 42px;
    font-weight: bold;
}

.row > span {
    position: absolute;
    padding: 12px 10px 0 110px;
    margin: 0;
}

.row > .toggle {
    position: absolute;
    top: 6px;
    right: 6px;
    width: 100px;
    height: 28px;
}

.toggle {
    border: 1px solid #888888;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    font-size: 19px;
    font-weight: bold;
    line-height: 30px;
}

.toggle[toggled="true"] {
    border: 1px solid #143fae;
}

.toggleOn {
    display: none;
    position: absolute;
    width: 60px;
    text-align: center;
    left: 0;
    top: 0;
    color: #FFFFFF;
    text-shadow: rgba(0, 0, 0, 0.4) 0px -1px 0;
}

.toggleOff {
    position: absolute;
    width: 60px;
    text-align: center;
    right: 0;
    top: 0;
    color: #666666;
}

.toggle[toggled="true"] > .toggleOn {
    display: block;
}

.toggle[toggled="true"] > .toggleOff {
    display: none;
}

.thumb {
    position: absolute;
    top: -1px;
    left: -1px;
    width: 40px;
    height: 28px;    
    border: 1px solid #888888;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
}

.toggle[toggled="true"] > .thumb {
    left: auto;
    right: -1px;
}

.panel > h2 {
    margin: 0 0 8px 14px;
    font-size: inherit;
    font-weight: bold;
    color: #4d4d70;
    text-shadow: rgba(255, 255, 255, 0.75) 2px 2px 0;
}

/************************************************************************************************/

#preloader {
    display: none;
}

